test/libsolidity/syntaxTests/parsing/location_specifiers_for_state_variables.sol
contract Foo {
	uint[] memory x;
}
// ----
// ParserError 2314: (23-29='memory'): Expected identifier but got 'memory'
